# app

./: .gitignore  Dockerfile  README.md  config.py  db.py  docker-compose.yml  main.py  pyproject.toml
api/domain/: users.py
api/routers/: __init__.py  articles.py  exception_handlers.py  users.py
core/: dependencies.py  mongo.py  settings.py
domain/: articles.py  users.py  version.py
infrastructure/: exceptions.py
infrastructure/repositories/: articles.py  users.py
infrastructure/services/: articles.py  users.py
src/: main.py
src/api/routers/: __init__.py  articles.py  auth.py  exception_handlers.py  root.py  users.py
src/core/: mongo.py  settings.py
src/domain/: articles.py  role.py  users.py  version.py
src/infrastructure/: dto.py  exceptions.py
src/infrastructure/repositories/: articles.py  users.py
src/infrastructure/services/: articles.py  auth.py  users.py
tests/: test_version.py
